--- a/_pages/outreach.html
+++ b/_pages/outreach.html
@@ -7,6 +7,20 @@ author_profile: true
 
 {% include base_path %}
 
+<!-- Custom text before the list of posts -->
+<div class="custom-text">
+  <p>As part of my work as a PhD student I have had the honor and pleasure to be able to give back to the community through public talks in Victoria, on Zoom and through helping out with a local regional science fair.</p>
+  
+  <!-- YouTube video link and blurb -->
+  <p>On June 24th, 2023 I was the invited speaker for   <a href="https://www.youtube.com/live/I5oFqYFgr_Q?si=1jFut3v2RKk2fj-L target="_blank">YouTube</a>. Friends of the DAO (FDAO) Star Party public general audience talk on galaxy evolution entitled How Galaxies Shape Up
+</p>
+</div>
+
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+<!-- Custom text after the list of posts -->
+<div class="custom-text">
+  <p>Thank you for visiting our outreach page. Stay tuned for more updates!</p>
+</div>
