--- a/_pages/outreach.html
+++ b/_pages/outreach.html
@@ -12,7 +12,7 @@ author_profile: true
   <p>As part of my work as a PhD student I have had the honor and pleasure to be able to give back to the community through public talks in Victoria, on Zoom and through helping out with a local regional science fair.</p>
   
   <!-- YouTube video link and blurb -->
-  <p>On June 24th, 2023 I was the invited speaker for   <a href="https://www.youtube.com/live/I5oFqYFgr_Q?si=1jFut3v2RKk2fj-L target="_blank">YouTube</a>. Friends of the DAO (FDAO) Star Party public general audience talk on galaxy evolution entitled How Galaxies Shape Up
+  <p>On June 24th, 2023 I was the invited speaker for the <a href="https://www.youtube.com/live/I5oFqYFgr_Q?si=1jFut3v2RKk2fj-L target="_blank">Friends of the DAO (FDAO) Star Party</a>.  public general audience talk on galaxy evolution entitled How Galaxies Shape Up
 </p>
 </div>
 
