Finalizing outreach updates by commenting out the thank you for visiting line

--- a/_pages/outreach.html
+++ b/_pages/outreach.html
@@ -16,7 +16,8 @@ author_profile: true
 </div>
 
 
-<!-- Custom text after the list of posts -->
+<!-- Custom text after the list of posts 
 <div class="custom-text">
   <p>Thank you for visiting our outreach page. Stay tuned for more updates!</p>
 </div>
+-->
