Adding placeholder "Under Construction" text

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -11,5 +11,7 @@ author_profile: true
   {% include archive-single.html %}
 {% endfor %}
 -->
-
-  <!--
+<div class="under-construction">
+  <h2>Page Under Construction</h2>
+  <p>I amcurrently working on this page. Check back soon for updates!</p>
+</div>
