Filling out Teaching Page

--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,14 +4,34 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-<!--
-{% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
--->
-<div class="under-construction">
-  <h2>Page Under Construction</h2>
-  <p>I am currently working on this page. Check back soon for updates!</p>
-</div>
+I have served as a teaching assistant for multiple undergraduate astronomy courses at the University of Victoria and Tufts University, supporting students across a wide range of quantitative and computational backgrounds.
+
+My teaching focuses on helping students build intuition for physical concepts while developing practical problem-solving and data analysis skills.
+
+## University of Victoria — Teaching Assistant (2021–2024)
+
+**Courses:**  
+- ASTR 101 — Introduction to Astronomy  
+- ASTR 150 — Concepts in Modern Astronomy
+
+**Responsibilities:**  
+- Led weekly laboratory sections (≈20–30 students per section)  
+- Taught quantitative reasoning, basic coding, and data interpretation  
+- Provided one-on-one and small-group mentoring during office hours  
+- Graded assignments and provided structured feedback on methods and reasoning
+
+## Tufts University — Teaching Assistant (2020–2021)
+
+**Courses:**  
+- AST 09 — The Modern Universe (large lecture, ≈100 students)  
+- AST32 - Galactic and Extragalactic Astronomy (Upper-level undergraduate astronomy course, ≈20 students)
+
+**Responsibilities:**  
+- Supported instruction in lecture and laboratory settings  
+- Helped design and troubleshoot hands-on data analysis exercises  
+- Assisted students with conceptual understanding and exam preparation
+
+## Teaching philosophy (brief)
+
+I aim to make technical material approachable by connecting abstract concepts to concrete examples and real data. I place particular emphasis on helping students develop confidence in quantitative reasoning and computational tools, especially for those encountering them for the first time.
