--- a/_pages/outreach.html
+++ b/_pages/outreach.html
@@ -5,19 +5,34 @@ permalink: /outreach/
 author_profile: true
 ---
 
+I enjoy sharing astronomy and data-driven science with broader audiences and have participated in public talks, online outreach, and community science events throughout my PhD.
 
-<!-- Custom text before the list of posts -->
-<div class="custom-text">
-  <p>As part of my work as a PhD student I have had the honor and pleasure to be able to give back to the community through public talks in Victoria, on Zoom and through helping out with a local regional science fair.</p>
-  
-  <!-- YouTube video link and blurb -->
-  <p>On June 24th, 2023 I was the invited speaker for the <a href="https://www.youtube.com/live/I5oFqYFgr_Q?si=1jFut3v2RKk2fj-L target="_blank">Friends of the DAO (FDAO) Star Party</a> public general audience talk on galaxy evolution entitled How Galaxies Shape Up
-</p>
-</div>
+My outreach focuses on making galaxy evolution, astronomical imaging, and data analysis accessible to non-specialist audiences, including students and community groups.
 
+## Public Talks and Events
 
-<!-- Custom text after the list of posts 
-<div class="custom-text">
-  <p>Thank you for visiting our outreach page. Stay tuned for more updates!</p>
-</div>
--->
+- **Invited Speaker — Friends of the Dominion Astrophysical Observatory (FDAO) Star Party**  
+  *June 24, 2023 (public talk, general audience)*  
+  Talk: *How Galaxies Shape Up: From Cosmic Collisions to Quiet Growth*  
+  Recording:  
+  <a href="https://www.youtube.com/live/I5oFqYFgr_Q?si=1jFut3v2RKk2fj-L" target="_blank">Watch on YouTube</a>
+
+- **Community and School Outreach (Online and In-Person)**  
+  - Guest talks for high school science classes   
+  - Informal Q&A sessions on careers in science and data analysis
+
+- **Regional Science Fair Support**  
+  - Assisted with judging and student feedback at local science fairs  
+  - Provided mentoring on experimental design and data presentation
+
+## Media
+
+- **Podcast Guest — Beyond the Jargon (CFUV 101.9 FM, University of Victoria)**  
+  Episode: *Galaxy Clusters with Max Kurzner*  
+  Discussion of galaxy clusters, astronomical surveys, and what it’s like to do research in astrophysics.  
+  Listen here:  
+  <a href="https://cfuvbtj.transistor.fm/episodes/galaxy-clusters-with-max-kurzner" target="_blank">https://cfuvbtj.transistor.fm/episodes/galaxy-clusters-with-max-kurzner</a>
+
+## Why I value outreach
+
+Engaging with non-specialist audiences has been one of the most rewarding parts of my graduate training. Explaining technical ideas clearly and intuitively has directly strengthened how I communicate research, teach students, and collaborate across disciplines.
